<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="150dp"
    android:background="#C10012"
     >
	
	    <!-- <LinearLayout
	        android:layout_margin="150dp"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:orientation="vertical" > -->
	        <!-- <FrameLayout
            android:id="@+id/container2"
            android:layout_width="match_parent"
            android:layout_height="match_parent" /> -->
				<TextView
				    android:id="@+id/loginLabel"
				    android:layout_width="wrap_content"
				    android:layout_height="wrap_content"
				    android:text="@string/lbl_login"
				    android:textColor="#FFF"
				    android:textSize="28sp" />	                    
	            <LinearLayout
	                android:layout_width="fill_parent"
	                android:layout_height="wrap_content"
	                android:orientation="vertical"
	                android:layout_marginTop="10dp" >
	                
	                <EditText
	                    android:id="@+id/Username"
	                    android:layout_width="fill_parent"
	                    android:layout_height="wrap_content"
	                    android:hint="@string/username_hint"
	                    android:paddingLeft="3dp"
	                    android:singleLine="true"
	                    android:textColor="#FFF"
	                    android:textColorHint="#FFF" />

			        <EditText
			            android:id="@+id/Password"
			            android:layout_marginTop="10dp"
			            android:layout_width="fill_parent"
			            android:layout_height="wrap_content"
			            android:hint="@string/password_hint"
				    	android:textColor="#FFF"
				    	android:textColorHint="#FFF"
			            android:password="true"
			            android:singleLine="true"
			            android:paddingLeft="3dp" />
		            <Button
			       	    android:id="@+id/login"
			       	    android:layout_width="fill_parent"
			       	    android:textAlignment="center"
			       	    android:layout_height="wrap_content"
			       	    android:textSize="20sp"
			       	    android:text="@string/btn_login" />
	            </LinearLayout>
		  	<!-- </LinearLayout> -->
</LinearLayout>
